<resources>
    <string name="app_name">AnimalApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breeds">Breeds:</string>
    <string name="image">Image</string>

    <!--    Login -->
    <string name="img_logo_app">Img_Logo_App</string>
    <string name="screen_desc">Trải nghiệm Animal App</string>
    <string name="login_screen_name">Đăng nhập</string>
    <string name="txt_email_title">EMAIL</string>
    <string name="input_email_hint">yourname@gmail.com</string>
    <string name="password">MẬT KHẨU</string>
    <string name="edit_pw_hint">********</string>
    <string name="forgot_pw_txt">Quên mật khẩu?</string>
    <string name="txt_login_btn">ĐĂNG NHẬP</string>
    <string name="txt_no_account">Chưa có tài khoản?</string>
    <string name="txt_btn_signup">Đăng ký ngay</string>
    <string name="txt_back_btn">txt_back_btn</string>
    <string name="txt_login">Đăng ký</string>
    <string name="str_name">HỌ VÀ TÊN</string>
    <string name="str_name_input_hint">your name</string>

    <!--    Signup-->
    <string name="str_policy_1">Tôi xác nhận thông tin trên </string>
    <string name="str_policy_2">chính sách</string>
    <string name="str_policy_3">và</string>
    <string name="str_policy_4">điều khoản</string>
    <string name="str_signup_btn">ĐĂNG KÝ</string>
    <string name="str_has_account">Đã có tài khoản?</string>
    <string name="str_btn_signIn">Đăng nhập ngay</string>

    <!--    Home-->
    <string name="str_home_dashboard">Dashboard Menu</string>
    <string name="str_home_subtitle">Welcome to Animal App</string>
    <string name="str_btn_category">Categories</string>
    <string name="str_btn_prediction">Prediction</string>
    <string name="str_btn_game">Game</string>
    <string name="str_btn_quiz">Quiz</string>
    <string name="str_btn_logout">Log Out</string>


    <!--    Quizz Game-->
    <string name="str_quizz">QUIZ GAME</string>

    <!--   Animal Prediction -->
    <string name="str_title">Choose a photo of an animal</string>
    <string name="str_info">More Information: </string>
    <string name="str_other">Other Results: </string>

    <!--    Gallery -->
    <string name="str_gallery">Gallery</string>
    <string name="str_photos">Photos</string>


    <!--    Search-->
    <string name="str_search">Search</string>

</resources>