<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth_user.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/item_24"
        android:paddingEnd="@dimen/item_24">

        <ImageView
            android:id="@+id/img_app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="51dp"
            android:contentDescription="@string/img_logo_app"
            android:src="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_screen_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_light"
            android:text="@string/screen_desc"
            android:textSize="@dimen/txt_26"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/img_app_logo"
            app:layout_constraintTop_toBottomOf="@+id/img_app_logo" />

        <TextView
            android:id="@+id/txt_login_screen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/login_screen_name"
            android:textColor="@color/red"
            android:textSize="@dimen/txt_32"
            app:layout_constraintStart_toStartOf="@+id/txt_screen_desc"
            app:layout_constraintTop_toBottomOf="@+id/txt_screen_desc" />

        <TextView
            android:id="@+id/txt_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_61"
            android:text="@string/txt_email_title"
            android:textColor="@color/gray"
            android:textSize="@dimen/txt_14"
            app:layout_constraintStart_toStartOf="@+id/txt_login_screen_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_login_screen_name" />

        <EditText
            android:id="@+id/edit_mail_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_48"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/gray_2D2"
            android:drawableEnd="@drawable/ic_mail"
            android:hint="@string/input_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_767"
            android:textSize="@dimen/txt_18"
            app:layout_constraintStart_toStartOf="@+id/txt_email_title"
            app:layout_constraintTop_toBottomOf="@+id/txt_email_title" />

        <Button
            android:id="@+id/btn_login_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/disable_btn"
            android:fontFamily="@font/lato_bold"
            android:padding="@dimen/pd_16"
            android:text="@string/txt_login_btn"
            android:textSize="@dimen/txt_16"
            app:layout_constraintTop_toBottomOf="@+id/btn_forgot_pw"
            tools:layout_editor_absoluteX="24dp" />

        <TextView
            android:id="@+id/txt_pw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_30"
            android:text="@string/password"
            android:textColor="@color/gray"
            android:textSize="@dimen/txt_14"
            app:layout_constraintStart_toStartOf="@+id/edit_mail_input"
            app:layout_constraintTop_toBottomOf="@+id/edit_mail_input" />

        <EditText
            android:id="@+id/edit_pw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_48"
            android:backgroundTint="@color/gray_2D2"
            android:drawableEnd="@drawable/ic_key"
            android:hint="@string/edit_pw_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_767"
            android:textSize="@dimen/txt_18"
            app:layout_constraintStart_toStartOf="@+id/txt_pw_title"
            app:layout_constraintTop_toBottomOf="@+id/txt_pw_title"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/btn_forgot_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_15"
            android:fontFamily="@font/lato_bold"
            android:text="@string/forgot_pw_txt"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="@+id/edit_pw"
            app:layout_constraintTop_toBottomOf="@+id/edit_pw" />

        <TextView
            android:id="@+id/txt2"
            android:paddingTop="@dimen/item_10"
            android:paddingBottom="@dimen/item_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/item_5"
            android:layout_marginBottom="@dimen/item_40"
            android:text="@string/txt_no_account"
            android:textSize="@dimen/txt_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_signup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:paddingTop="@dimen/item_10"
            android:paddingEnd="@dimen/item_10"
            android:paddingBottom="@dimen/item_10"
            android:paddingStart="0dp"
            android:text="@string/txt_btn_signup"
            android:textColor="@color/red"
            android:textSize="@dimen/txt_14"
            app:layout_constraintEnd_toEndOf="@+id/btn_login_submit"
            app:layout_constraintStart_toEndOf="@+id/txt2"
            app:layout_constraintTop_toTopOf="@+id/txt2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>