<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="0dp"
        android:layout_height="270dp"
        android:background="@drawable/bg_home_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/str_home_dashboard"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_10"
            android:fontFamily="@font/lato"
            android:text="@string/str_home_subtitle"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txtDashboard"
            app:layout_constraintTop_toBottomOf="@+id/txtDashboard" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/edit_text_corner"
        android:drawableStart="@drawable/ic_search"
        android:elevation="20dp"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:hint="@string/str_search"
        android:padding="12dp"
        android:textSize="@dimen/txt_14"
        app:layout_constraintBottom_toBottomOf="@+id/layout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/item_10"
                    android:background="@drawable/bg_home_btn">

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/round_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_category"
                        app:layout_constraintBottom_toBottomOf="@id/img_search"
                        app:layout_constraintEnd_toEndOf="@id/img_search"
                        app:layout_constraintStart_toStartOf="@id/img_search"
                        app:layout_constraintTop_toTopOf="@id/img_search" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/str_btn_category"
                    android:textAlignment="center"
                    android:textColor="#34346E"
                    android:textSize="@dimen/txt_16"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/item_10"
                    android:background="@drawable/bg_home_btn">

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/round_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_camera"
                        app:layout_constraintBottom_toBottomOf="@id/img_search"
                        app:layout_constraintEnd_toEndOf="@id/img_search"
                        app:layout_constraintStart_toStartOf="@id/img_search"
                        app:layout_constraintTop_toTopOf="@id/img_search" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="#34346E"
                    android:textSize="@dimen/txt_16"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/item_10"
                    android:background="@drawable/bg_home_btn">

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/round_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_camera"
                        app:layout_constraintBottom_toBottomOf="@id/img_search"
                        app:layout_constraintEnd_toEndOf="@id/img_search"
                        app:layout_constraintStart_toStartOf="@id/img_search"
                        app:layout_constraintTop_toTopOf="@id/img_search" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="#34346E"
                    android:textSize="@dimen/txt_16"

                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/item_10"
                    android:background="@drawable/bg_home_btn">

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/round_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_camera"
                        app:layout_constraintBottom_toBottomOf="@id/img_search"
                        app:layout_constraintEnd_toEndOf="@id/img_search"
                        app:layout_constraintStart_toStartOf="@id/img_search"
                        app:layout_constraintTop_toTopOf="@id/img_search" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="#34346E"
                    android:textSize="@dimen/txt_16"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/item_10"
                    android:background="@drawable/bg_home_btn">

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/round_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_camera"
                        app:layout_constraintBottom_toBottomOf="@id/img_search"
                        app:layout_constraintEnd_toEndOf="@id/img_search"
                        app:layout_constraintStart_toStartOf="@id/img_search"
                        app:layout_constraintTop_toTopOf="@id/img_search" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="#34346E"
                    android:textSize="@dimen/txt_16"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/item_10"
                    android:background="@drawable/bg_home_btn">

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/round_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_camera"
                        app:layout_constraintBottom_toBottomOf="@id/img_search"
                        app:layout_constraintEnd_toEndOf="@id/img_search"
                        app:layout_constraintStart_toStartOf="@id/img_search"
                        app:layout_constraintTop_toTopOf="@id/img_search" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="#34346E"
                    android:textSize="@dimen/txt_16"

                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>